tests/purs/failing/DeclConflictClassCtor.purs
-- @shouldFailWith DeclConflict
module Main where

data T = Fail

class Fail
