tests/purs/failing/DeclConflictClassCtor.out
Error found:
in module [33mMain[0m
at tests/purs/failing/DeclConflictClassCtor.purs:6:1 - 6:11 (line 6, column 1 - line 6, column 11)

  Declaration for type class [33mFail[0m conflicts with an existing data constructor of the same name.


See https://github.com/purescript/documentation/blob/master/errors/DeclConflict.md for more information,
or to contribute content related to this error.

